Convert calls to Java 9+ methods in the markdown library into Java 8 compatible variants